--- a/static/resources/i18n/en/mixes.json
+++ b/static/resources/i18n/en/mixes.json
@@ -1,3 +1,6 @@
 {
-  "SwitchBinary": "Switch"
+  "SwitchBinary": "Switch",
+  "select-$toggle": "Toggle",
+  "select-true": "On",
+  "select-false": "Off"
 }
