--- a/static/resources/i18n/en/mixes.json
+++ b/static/resources/i18n/en/mixes.json
@@ -2,5 +2,6 @@
   "SwitchBinary": "Switch",
   "select-$toggle": "Toggle",
   "select-true": "On",
-  "select-false": "Off"
+  "select-false": "Off",
+  "schedule": "Scheduling"
 }
